deploy/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowise
  namespace: ai
  labels:
    app: flowise
spec:
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 3000
  selector:
    app: flowise
  type: ClusterIP
